# mcp_tools

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.calculator  Dockerfile.minima  Dockerfile.think  Dockerfile.thread-continuity  Dockerfile.thread-continuity.debug  README.md  check-and-fix-server.sh  custom-server.py  debug-container.sh  docker-compose.yml  docker-compose.yml.backup.20250721_143407  docker-entrypoint.sh  fix-server-updated.sh  fix-server.sh  pyproject.toml  requirements.txt  server.py  setup-minima.sh  setup-optimized.sh  setup.sh  test_thread_continuity.sh  validate.sh
