[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-thread-continuity"
version = "0.1.0"
authors = [
  { name = "User", email = "user@example.com" },
]
description = "Claude Thread Continuity MCP Server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "mcp>=1.12.0",
  "pydantic>=2.0.0",
  "httpx>=0.24.0",
  "python-dotenv>=1.0.0",
  "fuzzywuzzy>=0.18.0",
  "python-Levenshtein>=0.12.0",
]